fix: unexpected whitespace

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -593,9 +593,7 @@ a.@{prefix}-menu__item {
       color: @menu-item-active-color--light;
     }
 
-    &:hover:not(.@{prefix}-is-active):not(.@{prefix}-is-opened):not(
-    .@{prefix}-is-disabled
-  ) {
+    &:hover:not(.@{prefix}-is-active):not(.@{prefix}-is-opened):not(.@{prefix}-is-disabled) {
       background-color: @menu-item-hover-bg--light;
     }
 
@@ -643,9 +641,7 @@ a.@{prefix}-menu__item {
         color: @menu-item-disabled-color-dark;
       }
 
-      &:hover:not(.@{prefix}-is-active):not(.@{prefix}-is-opened):not(
-      .@{prefix}-is-disabled
-    ) {
+      &:hover:not(.@{prefix}-is-active):not(.@{prefix}-is-opened):not(.@{prefix}-is-disabled) {
         background-color: @menu-item-hover-bg--dark;
       }
 
